cmake_minimum_required(VERSION 4.1)
project(CppProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chapter01_01 Chapter01_01/main.cpp)
add_executable(Chapter01_02 Chapter01_02/main.cpp)
add_executable(Chapter01_03 Chapter01_03/main.cpp)
add_executable(Chapter01_04 Chapter01_04/main.cpp)
add_executable(Chapter01_05 Chapter01_05/main.cpp)
add_executable(Chapter01_06 Chapter01_06/main.cpp)
add_executable(Chapter01_07 Chapter01_07/main.cpp)
