cmake_minimum_required(VERSION 4.1)
project(CppProject)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Chapter01_01 Chapter01_01/main.cpp)
#add_executable(Chapter01_02 Chapter01_02/main.cpp)
#add_executable(Chapter01_03 Chapter01_03/main.cpp)
#add_executable(Chapter01_04 Chapter01_04/main.cpp)
#add_executable(Chapter01_05 Chapter01_05/main.cpp)
#add_executable(Chapter01_06 Chapter01_06/main.cpp)
#add_executable(Chapter01_07 Chapter01_07/main.cpp)
#add_executable(Chapter01_08 Chapter01_08/main.cpp)
#add_executable(Chapter01_09 Chapter01_09/main.cpp)
#add_executable(Chapter01_10 Chapter01_10/main.cpp)
add_executable(
        Chapter01_11
        Chapter01_11/main.cpp
        Chapter01_11/add.cpp
)
add_executable(Chapter01_12 Chapter01_12/main.cpp)
add_executable(Chapter01_13 Chapter01_13/main.cpp)
add_executable(Chapter01_14 Chapter01_14/main.cpp)

add_executable(Chapter02_01 Chapter02_01/main.cpp)
add_executable(Chapter02_02 Chapter02_02/main.cpp)
add_executable(Chapter02_03 Chapter02_03/main.cpp)
add_executable(Chapter02_04 Chapter02_04/main.cpp)
add_executable(Chapter02_05 Chapter02_05/main.cpp)
add_executable(Chapter02_06 Chapter02_06/main.cpp)